fix logo link z-index bug

--- a/sass/layout/_site.sass
+++ b/sass/layout/_site.sass
@@ -49,6 +49,7 @@ body > div
     width: columns($logo-width,$brand-width)
     height: rhythm(3)
     background: image-url('64x64.png') no-repeat top center
+    z-index: 100
   .wordmark
     +adjust-font-size-to($medpx)
     +pre($logo-width,$brand-width)
